# demo-eval

./: README.md  app.py  metrics.py  pyproject.toml  requirements.txt  schema.sql  test_label_file.csv  test_label_file_subset.json  test_label_file_subset_extra_id.json
LSEG-test/: test_label_file_subset copy.json
templates/: create_use_case.html  error.html  index.html  upload_label_file.html  use_cases.html  view_evaluation.html  view_report.html  view_use_case.html
uploads/: test_label_file_subset.json
