[tool.poetry]
name = "evaluation-service"
version = "0.1.0"
description = "Web service for evaluating data extraction results"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pymongo = "^4.6.0"
plotly = "^5.18.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 